[ADD] FFT displacement maps generation FINISHED THANKS GOD [ADD] also a lot of changes I forgot about

--- a/Sandbox/Sandbox.vcxproj
+++ b/Sandbox/Sandbox.vcxproj
@@ -94,13 +94,13 @@
       <Command>if exist $(SolutionDir)bin\Debug\Sandbox\Shaders (rmdir /s /q $(SolutionDir)bin\Debug\Sandbox\Shaders)
 if exist $(SolutionDir)bin\Debug\Sandbox\Content (rmdir /s /q $(SolutionDir)bin\Debug\Sandbox\Content)
 echo Copying files...
-IF EXIST $(SolutionDir)$(ProjectName)\src\Shaders\*.hlsl\ (xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\src\Shaders\*.hlsl ..\bin\Debug\Sandbox\Shaders &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)$(ProjectName)\src\Shaders\*.hlsl ..\bin\Debug\Sandbox\Shaders &gt; nul)
-IF EXIST $(SolutionDir)Waldem\src\Shaders\*.hlsl\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\src\Shaders\*.hlsl ..\bin\Debug\Sandbox\Shaders &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\src\Shaders\*.hlsl ..\bin\Debug\Sandbox\Shaders &gt; nul)
-IF EXIST $(SolutionDir)Waldem\vendor\SDL\lib\SDL2.dll\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\vendor\SDL\lib\SDL2.dll ..\bin\Debug\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\vendor\SDL\lib\SDL2.dll ..\bin\Debug\Sandbox &gt; nul)
-IF EXIST $(SolutionDir)Waldem\vendor\dxc\bin\x64\dxcompiler.dll\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\vendor\dxc\bin\x64\dxcompiler.dll ..\bin\Debug\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\vendor\dxc\bin\x64\dxcompiler.dll ..\bin\Debug\Sandbox &gt; nul)
-IF EXIST $(SolutionDir)Waldem\vendor\dxc\bin\x64\dxil.dll\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\vendor\dxc\bin\x64\dxil.dll ..\bin\Debug\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\vendor\dxc\bin\x64\dxil.dll ..\bin\Debug\Sandbox &gt; nul)
-IF EXIST $(SolutionDir)Waldem\vendor\assimp\lib\assimp-vc142-mt.dll\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\vendor\assimp\lib\assimp-vc142-mt.dll ..\bin\Debug\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\vendor\assimp\lib\assimp-vc142-mt.dll ..\bin\Debug\Sandbox &gt; nul)
-xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\Content ..\bin\Debug\Sandbox\Content</Command>
+xcopy /E /I /Y "$(SolutionDir)$(ProjectName)\src\Shaders\*.hlsl" "../bin/Debug/Sandbox\Shaders\"
+xcopy /E /I /Y "$(SolutionDir)Waldem\src\Shaders\*.hlsl" "../bin/Debug/Sandbox\Shaders\"
+xcopy /Y "$(SolutionDir)Waldem\vendor\SDL\lib\SDL2.dll" "../bin/Debug/Sandbox\"
+xcopy /Y "$(SolutionDir)Waldem\vendor\dxc\bin\x64\dxcompiler.dll" "../bin/Debug/Sandbox\"
+xcopy /Y "$(SolutionDir)Waldem\vendor\dxc\bin\x64\dxil.dll" "../bin/Debug/Sandbox\"
+xcopy /Y "$(SolutionDir)Waldem\vendor\assimp\lib\assimp-vc142-mt.dll" "../bin/Debug/Sandbox\"
+xcopy /E /I /Y "$(SolutionDir)$(ProjectName)\Content\*" "../bin/Debug/Sandbox\Content\"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -127,13 +127,13 @@ xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\Content ..\bin\Debug\Sandbox\Cont
       <Command>if exist $(SolutionDir)bin\Debug\Sandbox\Shaders (rmdir /s /q $(SolutionDir)bin\Debug\Sandbox\Shaders)
 if exist $(SolutionDir)bin\Debug\Sandbox\Content (rmdir /s /q $(SolutionDir)bin\Debug\Sandbox\Content)
 echo Copying files...
-IF EXIST $(SolutionDir)$(ProjectName)\src\Shaders\*.hlsl\ (xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\src\Shaders\*.hlsl ..\bin\Release\Sandbox\Shaders &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)$(ProjectName)\src\Shaders\*.hlsl ..\bin\Release\Sandbox\Shaders &gt; nul)
-IF EXIST $(SolutionDir)Waldem\src\Shaders\*.hlsl\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\src\Shaders\*.hlsl ..\bin\Release\Sandbox\Shaders &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\src\Shaders\*.hlsl ..\bin\Release\Sandbox\Shaders &gt; nul)
-IF EXIST $(SolutionDir)Waldem\vendor\SDL\lib\SDL2.dll\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\vendor\SDL\lib\SDL2.dll ..\bin\Release\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\vendor\SDL\lib\SDL2.dll ..\bin\Release\Sandbox &gt; nul)
-IF EXIST $(SolutionDir)Waldem\vendor\dxc\bin\x64\dxcompiler.dll\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\vendor\dxc\bin\x64\dxcompiler.dll ..\bin\Release\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\vendor\dxc\bin\x64\dxcompiler.dll ..\bin\Release\Sandbox &gt; nul)
-IF EXIST $(SolutionDir)Waldem\vendor\dxc\bin\x64\dxil.dll\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\vendor\dxc\bin\x64\dxil.dll ..\bin\Release\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\vendor\dxc\bin\x64\dxil.dll ..\bin\Release\Sandbox &gt; nul)
-IF EXIST $(SolutionDir)Waldem\vendor\assimp\lib\assimp-vc142-mt.dll\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\vendor\assimp\lib\assimp-vc142-mt.dll ..\bin\Release\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\vendor\assimp\lib\assimp-vc142-mt.dll ..\bin\Release\Sandbox &gt; nul)
-xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\Content ..\bin\Release\Sandbox\Content</Command>
+xcopy /E /I /Y "$(SolutionDir)$(ProjectName)\src\Shaders\*.hlsl" "../bin/Release/Sandbox\Shaders\"
+xcopy /E /I /Y "$(SolutionDir)Waldem\src\Shaders\*.hlsl" "../bin/Release/Sandbox\Shaders\"
+xcopy /Y "$(SolutionDir)Waldem\vendor\SDL\lib\SDL2.dll" "../bin/Release/Sandbox\"
+xcopy /Y "$(SolutionDir)Waldem\vendor\dxc\bin\x64\dxcompiler.dll" "../bin/Release/Sandbox\"
+xcopy /Y "$(SolutionDir)Waldem\vendor\dxc\bin\x64\dxil.dll" "../bin/Release/Sandbox\"
+xcopy /Y "$(SolutionDir)Waldem\vendor\assimp\lib\assimp-vc142-mt.dll" "../bin/Release/Sandbox\"
+xcopy /E /I /Y "$(SolutionDir)$(ProjectName)\Content\*" "../bin/Release/Sandbox\Content\"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Dist|x64'">
@@ -160,13 +160,13 @@ xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\Content ..\bin\Release\Sandbox\Co
       <Command>if exist $(SolutionDir)bin\Debug\Sandbox\Shaders (rmdir /s /q $(SolutionDir)bin\Debug\Sandbox\Shaders)
 if exist $(SolutionDir)bin\Debug\Sandbox\Content (rmdir /s /q $(SolutionDir)bin\Debug\Sandbox\Content)
 echo Copying files...
-IF EXIST $(SolutionDir)$(ProjectName)\src\Shaders\*.hlsl\ (xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\src\Shaders\*.hlsl ..\bin\Dist\Sandbox\Shaders &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)$(ProjectName)\src\Shaders\*.hlsl ..\bin\Dist\Sandbox\Shaders &gt; nul)
-IF EXIST $(SolutionDir)Waldem\src\Shaders\*.hlsl\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\src\Shaders\*.hlsl ..\bin\Dist\Sandbox\Shaders &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\src\Shaders\*.hlsl ..\bin\Dist\Sandbox\Shaders &gt; nul)
-IF EXIST $(SolutionDir)Waldem\vendor\SDL\lib\SDL2.dll\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\vendor\SDL\lib\SDL2.dll ..\bin\Dist\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\vendor\SDL\lib\SDL2.dll ..\bin\Dist\Sandbox &gt; nul)
-IF EXIST $(SolutionDir)Waldem\vendor\dxc\bin\x64\dxcompiler.dll\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\vendor\dxc\bin\x64\dxcompiler.dll ..\bin\Dist\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\vendor\dxc\bin\x64\dxcompiler.dll ..\bin\Dist\Sandbox &gt; nul)
-IF EXIST $(SolutionDir)Waldem\vendor\dxc\bin\x64\dxil.dll\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\vendor\dxc\bin\x64\dxil.dll ..\bin\Dist\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\vendor\dxc\bin\x64\dxil.dll ..\bin\Dist\Sandbox &gt; nul)
-IF EXIST $(SolutionDir)Waldem\vendor\assimp\lib\assimp-vc142-mt.dll\ (xcopy /Q /E /Y /I $(SolutionDir)Waldem\vendor\assimp\lib\assimp-vc142-mt.dll ..\bin\Dist\Sandbox &gt; nul) ELSE (xcopy /Q /Y /I $(SolutionDir)Waldem\vendor\assimp\lib\assimp-vc142-mt.dll ..\bin\Dist\Sandbox &gt; nul)
-xcopy /Q /E /Y /I $(SolutionDir)$(ProjectName)\Content ..\bin\Dist\Sandbox\Content</Command>
+xcopy /E /I /Y "$(SolutionDir)$(ProjectName)\src\Shaders\*.hlsl" "../bin/Dist/Sandbox\Shaders\"
+xcopy /E /I /Y "$(SolutionDir)Waldem\src\Shaders\*.hlsl" "../bin/Dist/Sandbox\Shaders\"
+xcopy /Y "$(SolutionDir)Waldem\vendor\SDL\lib\SDL2.dll" "../bin/Dist/Sandbox\"
+xcopy /Y "$(SolutionDir)Waldem\vendor\dxc\bin\x64\dxcompiler.dll" "../bin/Dist/Sandbox\"
+xcopy /Y "$(SolutionDir)Waldem\vendor\dxc\bin\x64\dxil.dll" "../bin/Dist/Sandbox\"
+xcopy /Y "$(SolutionDir)Waldem\vendor\assimp\lib\assimp-vc142-mt.dll" "../bin/Dist/Sandbox\"
+xcopy /E /I /Y "$(SolutionDir)$(ProjectName)\Content\*" "../bin/Dist/Sandbox\Content\"</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
